Fixed and Reformatted Code